--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,16 @@ edition = "2021"
 
 [dependencies]
 dioxus = { version = "0.6.0", features = [] }
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
+rand = "0.9.0"
+strum = "0.27.1"
+strum_macros = "0.27.1"
+katex = { version = "0.4.6", default-features = false, features = ["wasm-js"] }
+arrayvec = "0.7.6"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+web-sys = { version = "0.3.77", features = ["Window", "Storage", "HtmlAudioElement"] }
+indexmap = { version = "2.10.0", features = ["serde"] }
 
 [features]
 default = ["web"]
