--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0.140"
 web-sys = { version = "0.3.77", features = ["Window", "Storage", "HtmlAudioElement"] }
 indexmap = { version = "2.10.0", features = ["serde"] }
 extension-traits = "2.0.1"
+const-css-minify = "1.0.0"
 
 [features]
 default = ["web"]
